feat: Creat Dice

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <h1>Pig The Dice Game!</h1>
   
-  <button>Roll!!</button>
+  <button id="rollBtn" onclick="diceRoll()">Roll!!</button>
 
-  
+
   <script type="text/javascript" src="main.js"></script>
   <script type="text/javascript" src="sub.js"></script>
 </body>
