feat: Create dice Image.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Pig The Dice Game!</h1>
   
   <button id="rollBtn" onclick="diceRoll()">Roll!!</button>
-
+  <div id="diceImage"></div>
 
   <script type="text/javascript" src="main.js"></script>
   <script type="text/javascript" src="sub.js"></script>
