feat: Move dice.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PigTheDiceGame</title>
   <link rel="stylesheet" href="style.css">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <body>
-  <h1>Pig The Dice Game!</h1>
+  <h1 class="animate__animated animate__bounce">Pig The Dice Game!</h1>
   
   <button id="rollBtn" onclick="diceRoll()">Roll!!</button>
   <div id="diceImage"></div>
