feat: Add alt attribute on img tag

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
   <h1 class="animate__animated animate__bounce">
-    <image class="pig-image" src="https://w.namu.la/s/e38a348c214efdcc10a415c3026c8549af34fd06214a4dfc0b6dae9252fab5c6145a7e6702eca2540986501711dbc1ca1de25a6fff7a06e49082f23378dd640b256310e8c45fdb09cebe5b5292095b1bfd27599d169b08cf7d28018bb42236a3"
-    />Pig The Dice Game!
+    <image class="pig-image" src="https://w.namu.la/s/e38a348c214efdcc10a415c3026c8549af34fd06214a4dfc0b6dae9252fab5c6145a7e6702eca2540986501711dbc1ca1de25a6fff7a06e49082f23378dd640b256310e8c45fdb09cebe5b5292095b1bfd27599d169b08cf7d28018bb42236a3" 
+    alt="돼지 사진" />Pig The Dice Game!
   </h1>
   <div id="dice-table">
    <input type="number" id="people" min="1" max="10">
