docs: add favicon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>PigTheDiceGame</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="icon" href="./images/pngwing.png" />
 </head>
 
 <body>
